--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="">
-                        <img src="assets/images/logo.png" alt="" style="height: 3rem;">
+                        <img src="img/Edil_celeste_logo.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="www.edilceleste.com">EDIL CELESTE</a></span>
