--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
 
 
-  <title>Home</title>
+  <title>Edil Celeste</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -35,7 +35,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="">
-                        <img src="img/Edil_celeste_logo.png" alt="" style="height: 3rem;">
+                        <img src="img/logo.webp" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="www.edilceleste.com">EDIL CELESTE</a></span>
