--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html  >
+<html>
+
 <head>
   <!-- Site made with Mobirise Website Builder v5.6.0, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -18,113 +19,110 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;1,400;1,700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;1,400;1,700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,700;1,400;1,700&display=swap&display=swap">
+  </noscript>
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
 
 
 
 </head>
+
 <body>
-
   <section data-bs-version="5.1" class="menu menu1 cid-txGyP2nDKD" once="menu" id="menu1-0">
-
-
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-        <div class="container">
-            <div class="navbar-brand">
-                <span class="navbar-logo">
-                    <a href="">
-                        <img src="img/logo.webp" alt="" style="height: 3rem;">
-                    </a>
-                </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="www.edilceleste.com">EDIL CELESTE</a></span>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="">
-                            About us</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="">
-                            Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="">Contacts</a>
-                    </li></ul>
-
-
-            </div>
+      <div class="container">
+        <div class="navbar-brand">
+          <span class="navbar-logo">
+            <a href="">
+              <img src="img/logo.webp" alt="" style="height: 3rem;">
+            </a>
+          </span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="www.edilceleste.com">EDIL CELESTE</a></span>
         </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+            <li class="nav-item"><a class="nav-link link text-black display-4" href="">
+                About us</a></li>
+            <li class="nav-item"><a class="nav-link link text-black display-4" href="">
+                Services</a></li>
+            <li class="nav-item"><a class="nav-link link text-black display-4" href="">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-</section>
+  </section>
 
-<section data-bs-version="5.1" class="header8 cid-txGDm8BLQL mbr-fullscreen" id="header8-3">
-
-
-
+  <section data-bs-version="5.1" class="header8 cid-txGDm8BLQL mbr-fullscreen" id="header8-3">
 
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12">
-                <h3 class="mbr-section-title mbr-white mbr-fonts-style display-1"><strong>COMING SOON</strong></h3>
-                <p class="mbr-text mbr-fonts-style mbr-white mb-4 display-1"></p>
-            </div>
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <h3 class="mbr-section-title mbr-white mbr-fonts-style display-1"><strong>COMING SOON</strong></h3>
+          <p class="mbr-text mbr-fonts-style mbr-white mb-4 display-1"></p>
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
-<section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-1">
-
-
-
-
-
+  <section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-1">
     <div class="container">
-        <div class="media-container-row align-center mbr-white">
-            <div class="row row-links">
-                <ul class="foot-menu">
-
-
-
-
-
-                <li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">About us</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Services</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Contact Us</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Careers</a>
-                    </li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white" href="#" target="_blank">Work</a>
-                    </li></ul>
-            </div>
-            <div class="row social-row">
-                <div class="social-list align-right pb-2">
-                <div class="soc-item">
-                        <a href="" target="_blank">
-                            <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="" target="_blank">
-                            <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
-                        </a>
-                    </div><div class="soc-item">
-                        <a href="" target="_blank">
-                            <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
-                        </a>
-                    </div></div>
-            </div>
-            <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2023 Edil Celeste</p>
-            </div>
+      <div class="media-container-row align-center mbr-white">
+        <div class="row row-links">
+          <ul class="foot-menu">
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">About us</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Services</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Contact Us</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Careers</a>
+            </li>
+            <li class="foot-menu-item mbr-fonts-style display-7">
+              <a class="text-white" href="#" target="_blank">Work</a>
+            </li>
+          </ul>
         </div>
+        <div class="row social-row">
+          <div class="social-list align-right pb-2">
+            <div class="soc-item">
+              <a href="" target="_blank">
+                <span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+              </a>
+            </div>
+            <div class="soc-item">
+              <a href="" target="_blank">
+                <span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+              </a>
+            </div>
+            <div class="soc-item">
+              <a href="" target="_blank">
+                <span class="socicon-googleplus socicon mbr-iconfont mbr-iconfont-social"></span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row row-copirayt">
+          <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
+            © Copyright 2023 Edil Celeste</p>
+        </div>
+      </div>
     </div>
     <section
       style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
@@ -147,6 +145,6 @@
       includeHTML();
     </script>
 
-  </body>
+</body>
 
-  </html>
+</html>
