--- a/index.html
+++ b/index.html
@@ -65,16 +65,19 @@
     </nav>
   </section>
 
-  <section data-bs-version="5.1" class="header8 cid-txGDm8BLQL mbr-fullscreen" id="header8-3">
-
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12">
-          <h3 class="mbr-section-title mbr-white mbr-fonts-style display-1"><strong>COMING SOON</strong></h3>
-          <p class="mbr-text mbr-fonts-style mbr-white mb-4 display-1"></p>
-        </div>
+  <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen" id="header5-6">
+      <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(54, 169, 225);"></div>
+      <div class="container">
+          <div class="row justify-content-end">
+              <div class="col-12 col-lg-7">
+                  <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Full Screen Intro</strong></h1>
+                  <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                      Mobirise gives you the freedom to develop as many websites as you like.</p>
+                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="https://mobiri.se">Create Free Website!</a>
+                      <a class="btn btn-warning-outline display-7" href="https://mobiri.se">Learn More</a></div>
+              </div>
+          </div>
       </div>
-    </div>
   </section>
 
   <section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-1">
