--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       <div class="container">
           <div class="row justify-content-end">
               <div class="col-12 col-lg-7">
-                  <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Full Screen Intro</strong></h1>
+                  <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
                   <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                      Mobirise gives you the freedom to develop as many websites as you like.</p>
-                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="https://mobiri.se">Create Free Website!</a>
-                      <a class="btn btn-warning-outline display-7" href="https://mobiri.se">Learn More</a></div>
+                      Costruiamo il Futuro</p>
+                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contact Us</a>
+                      <a class="btn btn-warning-outline display-7" href="">Learn More</a></div>
               </div>
           </div>
       </div>
