--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="col-12 col-lg-7">
                   <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
                   <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                      Costruiamo il Futuro</p>
+                      COSTRUIAMO IL FUTURO</p>
                   <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contact Us</a>
                       <a class="btn btn-warning-outline display-7" href="">Learn More</a></div>
               </div>
