--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
             <li class="nav-item"><a class="nav-link link text-black display-4" href="">
-                About us</a></li>
+                Chi Siamo</a></li>
             <li class="nav-item"><a class="nav-link link text-black display-4" href="">
-                Services</a></li>
-            <li class="nav-item"><a class="nav-link link text-black display-4" href="">Contacts</a>
+                Servizi</a></li>
+            <li class="nav-item"><a class="nav-link link text-black display-4" href="">Contatti</a>
             </li>
           </ul>
         </div>
@@ -73,8 +73,8 @@
                   <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
                   <p class="mbr-text mbr-fonts-style mbr-white display-7">
                       COSTRUIAMO IL FUTURO</p>
-                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contact Us</a>
-                      <a class="btn btn-warning-outline display-7" href="">Learn More</a></div>
+                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a>
+                      <a class="btn btn-warning-outline display-7" href="">Scopri di più</a></div>
               </div>
           </div>
       </div>
@@ -86,19 +86,13 @@
         <div class="row row-links">
           <ul class="foot-menu">
             <li class="foot-menu-item mbr-fonts-style display-7">
-              <a class="text-white" href="#" target="_blank">About us</a>
+              <a class="text-white" href="#" target="_blank">Chi Siamo</a>
             </li>
             <li class="foot-menu-item mbr-fonts-style display-7">
-              <a class="text-white" href="#" target="_blank">Services</a>
+              <a class="text-white" href="#" target="_blank">Contattaci</a>
             </li>
             <li class="foot-menu-item mbr-fonts-style display-7">
-              <a class="text-white" href="#" target="_blank">Contact Us</a>
-            </li>
-            <li class="foot-menu-item mbr-fonts-style display-7">
-              <a class="text-white" href="#" target="_blank">Careers</a>
-            </li>
-            <li class="foot-menu-item mbr-fonts-style display-7">
-              <a class="text-white" href="#" target="_blank">Work</a>
+              <a class="text-white" href="#" target="_blank">Lavora con Noi</a>
             </li>
           </ul>
         </div>
