--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
             <li class="nav-item"><a class="nav-link link text-black display-4" href="">
-                Chi Siamo</a></li>
+                CHI SIAMO</a></li>
             <li class="nav-item"><a class="nav-link link text-black display-4" href="">
-                Servizi</a></li>
-            <li class="nav-item"><a class="nav-link link text-black display-4" href="">Contatti</a>
+                SERVIZI</a></li>
+            <li class="nav-item"><a class="nav-link link text-black display-4" href="">CONTATTI</a>
             </li>
           </ul>
         </div>
