--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="navbar-brand">
           <span class="navbar-logo">
             <a href="">
-              <img src="img/logo.webp" alt="" style="height: 3rem;">
+              <img src="img/logo.webp" alt="" style="height: 3.5rem;">
             </a>
           </span>
           <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="www.edilceleste.com">EDIL CELESTE</a></span>
@@ -53,11 +53,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-            <li class="nav-item"><a class="nav-link link text-black display-4" href="">
+            <li class="nav-item"><a class="nav-link link text-black display-7" href="">
                 CHI SIAMO</a></li>
-            <li class="nav-item"><a class="nav-link link text-black display-4" href="">
+            <li class="nav-item"><a class="nav-link link text-black display-7" href="">
                 SERVIZI</a></li>
-            <li class="nav-item"><a class="nav-link link text-black display-4" href="">CONTATTI</a>
+            <li class="nav-item"><a class="nav-link link text-black display-7" href="">CONTATTI</a>
             </li>
           </ul>
         </div>
@@ -66,18 +66,19 @@
   </section>
 
   <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen" id="header5-6">
-      <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(54, 169, 225);"></div>
-      <div class="container">
-          <div class="row justify-content-end">
-              <div class="col-12 col-lg-6">
-                  <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
-                  <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                      COSTRUIAMO IL FUTURO</p>
-                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a>
-                      <a class="btn btn-warning-outline display-7" href="">Scopri di più</a></div>
-              </div>
+    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(54, 169, 225);"></div>
+    <div class="container">
+      <div class="row justify-content-end">
+        <div class="col-12 col-lg-6">
+          <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
+          <p class="mbr-text mbr-fonts-style mbr-white display-7">
+            COSTRUIAMO IL FUTURO</p>
+          <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a>
+            <a class="btn btn-warning-outline display-7" href="">Scopri di più</a>
           </div>
+        </div>
       </div>
+    </div>
   </section>
 
   <section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-1">
