--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen" id="header5-6">
     <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
     <div class="container">
-      <div class="row justify-content-end">
+      <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
           <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
           <p class="mbr-text mbr-fonts-style mbr-white display-7">
