--- a/index.html
+++ b/index.html
@@ -65,18 +65,21 @@
     </nav>
   </section>
 
-  <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen" data-bg-video="https://www.edilceleste.com/files/images/3.mp4" id="header5-6">
-      <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(54, 169, 225);"></div>
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-12 col-lg-6">
-                  <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
-                  <p class="mbr-text mbr-fonts-style mbr-white display-5">
-                      COSTRUIAMO IL FUTURO</p>
-                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
-              </div>
-          </div>
+  <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen" id="header5-6">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(54, 169, 225);"></div>
+    <div class="container">
+      <video id="background-video" autoplay loop muted poster="https://www.edilceleste.com/files/images/3.mp4">
+        <source src="https://www.edilceleste.com/files/images/3.mp4" type="video/mp4">
+      </video>
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-6">
+          <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
+          <p class="mbr-text mbr-fonts-style mbr-white display-5">
+            COSTRUIAMO IL FUTURO</p>
+          <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
+        </div>
       </div>
+    </div>
   </section>
 
   <section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-1">
