--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
   </section>
 
   <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen" id="header5-6">
+    <video loop="loop" autoplay playsinline muted >
+				<source type="video/mp4" src="https://www.edilceleste.com/files/images/3.mp4" />
+			</video>
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(54, 169, 225);"></div>
     <div class="container">
-      <video id="background-video" autoplay loop muted poster="https://www.edilceleste.com/files/images/3.mp4">
-        <source src="https://www.edilceleste.com/files/images/3.mp4" type="video/mp4">
-      </video>
       <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
           <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>EDIL CELESTE</strong></h1>
