--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
-          <p class="mbr-text mbr-fonts-style mbr-white display-5">
-            COSTRUIAMO IL FUTURO</p>
+          <h2 class="mbr-text mbr-fonts-style mbr-white display-5">
+            COSTRUIAMO IL FUTURO</h2>
           <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
         </div>
       </div>
