--- a/index.html
+++ b/index.html
@@ -67,17 +67,16 @@
   </section>
 
 
-  <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen" id="header5-6">
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(26, 32, 51);"></div>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-6">
-          <h2 class="mbr-text mbr-fonts-style mbr-white display-5">
-            COSTRUIAMO IL FUTURO</h2>
-          <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
-        </div>
+  <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen mbr-parallax-background" id="header5-6">
+      <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(26, 32, 51);"></div>
+      <div class="container">
+          <div class="row">
+              <div class="col-12 col-lg-5">
+                  <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>COSTRUIAMO IL FUTURO</strong></h1>
+                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
+              </div>
+          </div>
       </div>
-    </div>
   </section>
 
 
