--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
 <body>
   <section data-bs-version="5.1" class="menu menu1 cid-txGyP2nDKD" once="menu" id="menu1-0">
-    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-      <div class="container">
+    <nav class="navbar navbar-dropdown navbar-expand-lg">
+      <div class="container-fluid">
         <div class="navbar-brand">
           <span class="navbar-logo">
             <a href="">
-              <img src="img/logo.webp" alt="" style="height: 3.5rem;">
+              <img src="assets/images/logo.webp" alt="Mobirise" style="height: 4.8rem;">
             </a>
           </span>
-          <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="www.edilceleste.com">EDIL CELESTE</a></span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="">EDIL CELESTE</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
           aria-label="Toggle navigation">
@@ -54,11 +54,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-            <li class="nav-item"><a class="nav-link link text-black display-7" href="">
-                CHI SIAMO</a></li>
-            <li class="nav-item"><a class="nav-link link text-black display-7" href="">
-                SERVIZI</a></li>
-            <li class="nav-item"><a class="nav-link link text-black display-7" href="">CONTATTI</a>
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="">CHI SIAMO</a></li>
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="">SERVIZI</a></li>
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="">CONTATTI</a>
             </li>
           </ul>
         </div>
@@ -68,15 +66,15 @@
 
 
   <section data-bs-version="5.1" class="header5 cid-txKlOWEnce mbr-fullscreen mbr-parallax-background" id="header5-6">
-      <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(26, 32, 51);"></div>
-      <div class="container">
-          <div class="row">
-              <div class="col-12 col-lg-5">
-                  <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>COSTRUIAMO IL FUTURO</strong></h1>
-                  <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
-              </div>
-          </div>
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(26, 32, 51);"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-5">
+          <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>COSTRUIAMO IL FUTURO</strong></h1>
+          <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
+        </div>
       </div>
+    </div>
   </section>
 
 
