--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
   <title>Edil Celeste | Home</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css" />
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -26,12 +27,29 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
-
+  <span class="fi fi-gr"></span>
 
 
 </head>
 
 <body>
+
+  <div id="language-tool-box" class="language-tool-box" style="overflow: hidden">
+    <div style="overflow: hidden">
+      <span class="bt-language pull-right" data-role="0">ES<i class="fa fa-angle-down"></i></span>
+    </div>
+    <div id="list-language-box" class="animated slideInDown hidden" style="z-index: 999">
+      <ul id="Language-list" class="Language-list" style="">
+        <li class="link">
+          <a href="/en_US/" style="color: white; text-decoration: none" rel="alternate" hreflang="en-US">English (United States)</a>
+        </li>
+        <li class="current">
+          <a href="/" style="color: white; text-decoration: none" rel="alternate" hreflang="es-ES">Spanish (Spain)</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
   <section data-bs-version="5.1" class="menu menu1 cid-txGyP2nDKD" once="menu" id="menu1-0">
     <nav class="navbar navbar-dropdown navbar-expand-lg">
       <div class="container-fluid">
