--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <span class="fi fi-gr"></span>
   <div id="language-tool-box" class="language-tool-box" style="overflow: hidden">
     <div style="overflow: hidden">
-        <span class="fi fi-gr"></span>
+        <span class="fi fi-it"></span>
       <span class="bt-language pull-right" data-role="0">ES<i class="fa fa-angle-down"></i></span>
     </div>
     <div id="list-language-box" class="animated slideInDown hidden" style="z-index: 999">
