--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
   <div id="language-tool-box" class="language-tool-box" style="overflow: hidden">
     <div style="overflow: hidden">
         <span class="fi fi-it"></span>
-      <span class="bt-language pull-right" data-role="0">ES<i class="fa fa-angle-down"></i></span>
+      <span class="bt-language pull-right" data-role="0">IT<i class="fa fa-angle-down"></i></span>
     </div>
     <div id="list-language-box" class="animated slideInDown hidden" style="z-index: 999">
       <ul id="Language-list" class="Language-list" style="">
         <li class="link">
-          <a href="/en_US/" style="color: white; text-decoration: none" rel="alternate" hreflang="en-US">English (United States)</a>
+          <a href="/en_US/" style="color: white; text-decoration: none" rel="alternate" hreflang="en-US">English</a>
         </li>
         <li class="current">
-          <a href="/" style="color: white; text-decoration: none" rel="alternate" hreflang="es-ES">Spanish (Spain)</a>
+          <a href="/" style="color: white; text-decoration: none" rel="alternate" hreflang="es-ES">Italian</a>
         </li>
       </ul>
     </div>
