--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="/en_US/" style="color: white; text-decoration: none" rel="alternate" hreflang="en-US">English</a>
         </li>
         <li class="current">
-          <a href="/" style="color: white; text-decoration: none" rel="alternate" hreflang="es-ES">Italian</a>
+          <a href="/" style="color: white; text-decoration: none" rel="alternate" hreflang="it-IT">Italian</a>
         </li>
       </ul>
     </div>
