--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
           <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
             <li class="nav-item"><a class="nav-link link text-white display-4" href="">CHI SIAMO</a></li>
             <li class="nav-item"><a class="nav-link link text-white display-4" href="">SERVIZI</a></li>
-            <li class="nav-item"><a class="nav-link link text-white display-4" href="">CONTATTI</a>
-            </li>
+            <li class="nav-item"><a class="nav-link link text-white display-4" href="">CONTATTI</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link link text-white dropdown-toggle show display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><span class="fi fi-it"></span>IT</a><div class="dropdown-menu show" aria-labelledby="dropdown-undefined" data-bs-popper="none">
+              <a class="text-white dropdown-item display-4" href="https://mobiri.se"><span class="fi fi-en"></span>EN</a></div></li></ul>
           </ul>
         </div>
       </div>
