--- a/index.html
+++ b/index.html
@@ -30,31 +30,13 @@
 
 <body>
 
-  <span class="fi fi-gr"></span>
-  <div id="language-tool-box" class="language-tool-box" style="overflow: hidden">
-    <div style="overflow: hidden">
-        <span class="fi fi-it"></span>
-      <span class="bt-language pull-right" data-role="0">IT<i class="fa fa-angle-down"></i></span>
-    </div>
-    <div id="list-language-box" class="animated slideInDown hidden" style="z-index: 999">
-      <ul id="Language-list" class="Language-list" style="">
-        <li class="link">
-          <a href="/en_US/" style="color: white; text-decoration: none" rel="alternate" hreflang="en-US">English</a>
-        </li>
-        <li class="current">
-          <a href="/" style="color: white; text-decoration: none" rel="alternate" hreflang="it-IT">Italian</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
   <section data-bs-version="5.1" class="menu menu1 cid-txGyP2nDKD" once="menu" id="menu1-0">
     <nav class="navbar navbar-dropdown navbar-expand-lg">
       <div class="container-fluid">
         <div class="navbar-brand">
           <span class="navbar-logo">
             <a href="">
-              <img src="assets/images/logo.webp" alt="Mobirise" style="height: 4.8rem;">
+              <img src="assets/images/logo.webp" alt="Edil Celeste" style="height: 4.8rem;">
             </a>
           </span>
           <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="">EDIL CELESTE</a></span>
@@ -75,7 +57,7 @@
             <li class="nav-item"><a class="nav-link link text-white display-4" href="">CONTATTI</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link link text-white dropdown-toggle show display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><span class="fi fi-it"></span>IT</a><div class="dropdown-menu show" aria-labelledby="dropdown-undefined" data-bs-popper="none">
-              <a class="text-white dropdown-item display-4" href="https://mobiri.se"><span class="fi fi-en"></span>EN</a></div></li></ul>
+              <a class="text-white dropdown-item display-4" href="https://mobiri.se"><span class="fi fi-gb"></span>EN</a></div></li></ul>
           </ul>
         </div>
       </div>
