--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <li class="nav-item"><a class="nav-link link text-white display-4" href="">SERVIZI</a></li>
             <li class="nav-item"><a class="nav-link link text-white display-4" href="">CONTATTI</a></li>
             <li class="nav-item dropdown">
-              <a class="nav-link link text-white dropdown-toggle show display-4" href="" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><span class="fi fi-it"></span> IT</a><div class="dropdown-menu show" aria-labelledby="dropdown-undefined" data-bs-popper="none">
-              <a class="text-white dropdown-item display-4" href=""><span class="fi fi-gb"></span> EN</a></div></li></ul>
+              <a class="nav-link link text-white dropdown-toggle show display-4" href="" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><span class="fi fi-it"></span>&nbsp IT</a><div class="dropdown-menu show" aria-labelledby="dropdown-undefined" data-bs-popper="none">
+              <a class="text-white dropdown-item display-4" href=""><span class="fi fi-gb"></span>&nbsp EN</a></div></li></ul>
           </ul>
         </div>
       </div>
