--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-5">
-          <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1">COSTRUIAMO IL <strong>FUTURO</strong></h1>
+          <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1">COSTRUIAMO IL <div class="waviy">
+   <span style="--i:1">F</span>
+   <span style="--i:2">U</span>
+   <span style="--i:3">T</span>
+   <span style="--i:4">U</span>
+   <span style="--i:5">R</span>
+   <span style="--i:6">O</span>
+  </div></h1>
           <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
         </div>
       </div>
