--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="navbar-brand">
           <span class="navbar-logo">
             <a href="">
-              <img src="img/logo_bn.webp" alt="Edil Celeste" style="height: 4.8rem;">
+              <img src="img/logo_bnc.webp" alt="Edil Celeste" style="height: 4.8rem;">
             </a>
           </span>
           <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="">EDIL CELESTE</a></span>
