--- a/index.html
+++ b/index.html
@@ -84,6 +84,42 @@
     </div>
   </section>
 
+  <section data-bs-version="5.1" class="clients1 cid-txQJZk8CT2" id="clients1-9">
+      <div class="images-container container">
+          <div class="mbr-section-head">
+              <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
+                  <strong>I NOSTRI PARTNER</strong></h3>
+
+              <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">Nostri alleati per creare un mondo migliore</p>
+          </div>
+          <div class="row justify-content-center mt-4">
+              <div class="col-md-3 card">
+                  <img src="assets/images/1.png">
+              </div>
+              <div class="col-md-3 card">
+                  <img src="assets/images/2.png">
+              </div>
+              <div class="col-md-3 card">
+                  <img src="assets/images/3.png">
+              </div>
+              <div class="col-md-3 card">
+                  <img src="assets/images/4.png">
+              </div>
+              <div class="col-md-3 card">
+                  <img src="assets/images/2.png">
+              </div>
+              <div class="col-md-3 card">
+                  <img src="assets/images/3.png">
+              </div>
+              <div class="col-md-3 card">
+                  <img src="assets/images/4.png">
+              </div>
+              <div class="col-md-3 card">
+                  <img src="assets/images/5.png">
+              </div>
+          </div>
+      </div>
+  </section>
 
   <section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-1">
     <div class="container">
