--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
       <div class="images-container container">
           <div class="mbr-section-head">
               <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                  <strong>I NOSTRI PARTNER</strong></h3>
+                  <strong>PARTNER</strong></h3>
 
-              <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">Nostri alleati per creare un mondo migliore</p>
+              <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">Nostri Alleati per Creare un Mondo Migliore</p>
           </div>
           <div class="row justify-content-center mt-4">
               <div class="col-md-3 card">
