--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="mbr-section-head">
               <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                   <strong>I NOSTRI PARTNER</strong></h3>
-              <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">I Migliori Alleati per Creare un Mondo più Sostenibile</p>
+              <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">Il Segreto del Nostro Successo</p>
           </div>
           <div class="row justify-content-center mt-4">
               <div class="col-md-3 card">
