--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <img src="files/images/dewalt.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="assets/images/3.png">
+                  <img src="files/images/upower.png">
               </div>
               <div class="col-md-3 card">
                   <img src="assets/images/4.png">
