--- a/index.html
+++ b/index.html
@@ -108,13 +108,7 @@
                   <img src="files/images/dewalt.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/upower.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="assets/images/4.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="assets/images/5.png">
+                  <img src="files/images/upower.jpg">
               </div>
           </div>
       </div>
