--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                   <img src="files/images/bosch.png">
               </div>
               <div class="col-md-3 card">
+                  <img src="files/images/deltaplus.png">
+              </div>
+              <div class="col-md-3 card">
                   <img src="files/images/stanley.png">
               </div>
               <div class="col-md-3 card">
