--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <img src="files/images/bosch.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/deltaplus.png">
+                  <img src="files/images/deltaplus.jpg">
               </div>
               <div class="col-md-3 card">
                   <img src="files/images/stanley.png">
