--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <img src="files/images/deltaplus.jpg">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/stanley.png">
+                  <img src="files/images/stanley.jpg">
               </div>
               <div class="col-md-3 card">
                   <img src="files/images/hilti.png">
