--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                   <img src="files/images/bosch.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/deltaplus.jpg">
+                  <img src="files/images/deltaplus.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/stanley.jpg">
+                  <img src="files/images/stanley.png">
               </div>
               <div class="col-md-3 card">
                   <img src="files/images/hilti.png">
@@ -111,7 +111,7 @@
                   <img src="files/images/dewalt.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/upower.jpg">
+                  <img src="files/images/upower.png">
               </div>
           </div>
       </div>
