--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
           </div>
           <div class="row justify-content-center mt-4">
               <div class="col-md-3 card">
-                  <img src="files/images/makita.png">
+                  <img src="files/images/partners_logo/makita.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/bosch.png">
+                  <img src="files/images/partners_logo/bosch.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/deltaplus.png">
+                  <img src="files/images/partners_logo/deltaplus.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/stanley.png">
+                  <img src="files/images/partners_logo/stanley.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/hilti.png">
+                  <img src="files/images/partners_logo/hilti.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/dewalt.png">
+                  <img src="files/images/partners_logo/dewalt.png">
               </div>
               <div class="col-md-3 card">
-                  <img src="files/images/upower.png">
+                  <img src="files/images/partners_logo/upower.png">
               </div>
           </div>
       </div>
