--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
               <div class="col-md-3 card">
                   <img src="files/images/partners_logo/upower.png">
               </div>
+              <div class="col-md-3 card">
+                  <img src="files/images/partners_logo/kapriol.png">
+              </div>
           </div>
       </div>
   </section>
