--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
             <li class="nav-item"><a class="nav-link link text-white display-4" href="">SERVIZI</a></li>
             <li class="nav-item"><a class="nav-link link text-white display-4" href="">CONTATTI</a></li>
             <li class="nav-item dropdown">
-              <a class="nav-link link text-white dropdown-toggle show display-4" href="" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><span class="fi fi-it"></span>&nbsp IT</a><div class="dropdown-menu show" aria-labelledby="dropdown-undefined" data-bs-popper="none">
-              <a class="text-white dropdown-item display-4" href=""><span class="fi fi-gb"></span>&nbsp EN</a></div></li></ul>
+              <a class="nav-link link text-white dropdown-toggle show display-4" href="" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true"><span class="fi fi-it"></span>&nbsp IT</a>
+              <div class="dropdown-menu show" aria-labelledby="dropdown-undefined" data-bs-popper="none">
+                <a class="text-white dropdown-item display-4" href=""><span class="fi fi-gb"></span>&nbsp EN</a>
+              </div>
+            </li>
+          </ul>
           </ul>
         </div>
       </div>
@@ -71,13 +75,14 @@
       <div class="row">
         <div class="col-12 col-lg-6">
           <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1">COSTRUIAMO IL <div class="waviy">
-   <span style="--i:1"><b>F</b></span>
-   <span style="--i:2"><b>U</b></span>
-   <span style="--i:3"><b>T</b></span>
-   <span style="--i:4"><b>U</b></span>
-   <span style="--i:5"><b>R</b></span>
-   <span style="--i:6"><b>O</b></span>
-  </div></h1>
+              <span style="--i:1"><b>F</b></span>
+              <span style="--i:2"><b>U</b></span>
+              <span style="--i:3"><b>T</b></span>
+              <span style="--i:4"><b>U</b></span>
+              <span style="--i:5"><b>R</b></span>
+              <span style="--i:6"><b>O</b></span>
+            </div>
+          </h1>
           <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-7" href="">Contattaci</a></div>
         </div>
       </div>
@@ -85,39 +90,61 @@
   </section>
 
   <section data-bs-version="5.1" class="clients1 cid-txQJZk8CT2" id="clients1-9">
-      <div class="images-container container">
-          <div class="mbr-section-head">
-              <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                  <strong>I NOSTRI PARTNER</strong></h3>
-              <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">Il Segreto del Nostro Successo</p>
-          </div>
-          <div class="row justify-content-center mt-4">
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/makita.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/bosch.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/deltaplus.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/stanley.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/hilti.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/dewalt.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/upower.png">
-              </div>
-              <div class="col-md-3 card">
-                  <img src="files/images/partners_logo/kapriol.png">
-              </div>
-          </div>
+    <div class="images-container container">
+      <div class="mbr-section-head">
+        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
+          <strong>I NOSTRI PARTNER</strong>
+        </h3>
+        <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">Il Segreto del Nostro Successo</p>
       </div>
+      <div class="row justify-content-center mt-4">
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/makita.png">
+        </div>
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/bosch.png">
+        </div>
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/deltaplus.png">
+        </div>
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/stanley.png">
+        </div>
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/hilti.png">
+        </div>
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/dewalt.png">
+        </div>
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/upower.png">
+        </div>
+        <div class="col-md-3 card">
+          <img src="files/images/partners_logo/kapriol.png">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section data-bs-version="5.1" class="info3 cid-txXlETiyLQ mbr-parallax-background" id="info3-c">
+    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(26, 32, 51);">
+    </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="card col-12 col-lg-10">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2">
+                <strong>CAPPOTTO TERMICO</strong>
+              </h4>
+              <p class="mbr-text mbr-fonts-style mb-4 display-7">
+                Un lavoro professionale e a regola d'arte</p>
+              <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="">Preventivo gratuito</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section data-bs-version="5.1" class="footer3 cid-txGz2pLMVf" once="footers" id="footer3-1">
