--- a/pages/contatti.html
+++ b/pages/contatti.html
@@ -10,7 +10,6 @@
   <link rel="shortcut icon" href="assets/images/logo.webp" type="image/x-icon">
   <meta name="description" content="">
 
-
   <title>Contatti</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -27,26 +26,20 @@
   </noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-
-
-
-
 </head>
 
 <body>
 
   <section data-bs-version="5.1" class="menu menu1 cid-txGyP2nDKD" once="menu" id="menu1-e">
-
-
     <nav class="navbar navbar-dropdown navbar-expand-lg">
       <div class="container-fluid">
         <div class="navbar-brand">
           <span class="navbar-logo">
-            <a href="https://mobiri.se">
-              <img src="assets/images/logo.webp" alt="Mobirise" style="height: 4.8rem;">
+            <a href="https://www.edilceleste.com">
+              <img src="assets/images/logo.webp" alt="Edil Celeste" style="height: 4.8rem;">
             </a>
           </span>
-          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobiri.se">EDIL CELESTE</a></span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://www.edilceleste.com">EDIL CELESTE</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
           aria-label="Toggle navigation">
